scrollbar fix

--- a/frontend/src/components/MusicCard/index.css
+++ b/frontend/src/components/MusicCard/index.css
@@ -1,8 +1,4 @@
 .Modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   border-radius: 4px;
   outline: none;
   padding: 20px;
@@ -16,6 +12,9 @@
   left: 0;
   right: 0;
   bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgba(120, 120, 120, 0.75);
 }
 
