--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -3,6 +3,8 @@
   margin: 0;
   padding: 0;
   outline: 0;
+  scroll-padding: 0;
+  scroll-margin: 0;
   box-sizing: border-box;
   list-style: none;
 }
@@ -36,13 +38,13 @@ p {
   background: var(--spot-color);
   border-radius: 5px;
   transition: 300ms;
-  scroll-margin-bottom: 0px;
 }
 
 body {
   font: 400 14px Roboto, sans-serif;
   background: var(--bg);
   -webkit-font-smoothing: antialiased;
+  overflow: auto;
 }
 
 input,
@@ -64,12 +66,12 @@ a {
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow: scroll;
   padding-bottom: 0;
 }
 
 .content-wrap {
   flex: 1;
+  min-height: 100vh;
   height: 100%;
 }
 
@@ -85,7 +87,7 @@ a {
 
 .content {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   height: 100%;
   width: 100%;
